Add animation and keys

--- a/index.html
+++ b/index.html
@@ -9,53 +9,55 @@
     <script scr="app.js" defer></script>
 </head>
 <body>
-
+    <header>
+        <h1>Javascript Drumkit</h1>
+    </header>
     <main>
         <!-- Play by Keys .drumkeys #drums -->
        <section class="drumkeys">
         <div id="hihat">
             <kbd>d</kbd>
-            <audio src=""></audio>
+            <audio src="/sounds/hihat.wav"></audio>
         </div>
 
         <div id="snare">
             <kbd>j</kbd>
-            <audio src=""></audio>
+            <audio src="sounds/snare.wav"></audio>
         </div>
 
         <div id="kick">
             <kbd>f</kbd>
-            <audio src=""></audio>
+            <audio src="sounds/kick.wav"></audio>
         </div>
 
         <div id="boom">
             <kbd>a</kbd>
-            <audio src=""></audio>
+            <audio src="sounds/boom.wav"></audio>
         </div>
         
         <div id="clap">
             <kbd>s</kbd>
-            <audio src=""></audio>
+            <audio src="sounds/clap.wav"></audio>
         </div>
 
         <div id="openhat">
             <kbd>g</kbd>
-            <audio src=""></audio>
+            <audio src="sounds/openhat.wav"></audio>
         </div>
 
         <div id="ride">
             <kbd>h</kbd>
-            <audio src=""></audio>
+            <audio src="sounds/ride.wav"></audio>
         </div>
 
         <div id="tom">
             <kbd>l</kbd>
-            <audio src=""></audio>
+            <audio src="sounds/tom.wav"></audio>
         </div>
        
         <div id="tink">
             <kbd>k</kbd>
-            <audio src=""></audio>
+            <audio src="sounds/tink.wav"></audio>
         </div>
        </section> 
        <!-- end .drumkeys #drums -->
